# judge-pics

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  additional-sources.md  convert_images.py  judges.json  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py  tests.py
.github/workflows/: lint.yml  tests.yml  upload.yml
hooks/: post_push
judge_pics/: __init__.py  convert_images.py  search.py  update.py  upload.py
judge_pics/data/: judges.json  people.json
judge_pics/scrapers/: __init__.py  cand_judges.py  dc_circuit_judges.py
scrapers/: cand_judges.py
